tests/paczka1/fuzzy1/56108265.err
Error in line 3: vxd9zoA2E S799 75,4
Error in line 14: vxd9zoA2E A455 35,5
Error in line 18: tnaxyS7q7Y S195 66,2
Error in line 28: vxd9zoA2E S799 85,2
Error in line 37: vxd9zoA2E S799 86,37
